--- a/webserver/templates/create_station.html
+++ b/webserver/templates/create_station.html
@@ -21,7 +21,7 @@ Theme: <input type="text" name="theme"> <font size=3>(e.g. dance, workout, relax
 <input type="submit" value="Create">
 </form>
 
-<form action="/user/{{name}}/music">
+<form method="POST" action="/user/{{name}}/music">
 <input type="submit" value="Back to music">
 </form>
 
