--- a/webserver/templates/user.html
+++ b/webserver/templates/user.html
@@ -31,6 +31,10 @@
   {% endfor %}
 </table>
 
+<form method="POST" action="/user/{{name}}/music">
+<p><input type="submit" value="Go to Music"></p>
+</form>
+
 </body>
 
 
