--- a/webserver/templates/user.html
+++ b/webserver/templates/user.html
@@ -5,6 +5,8 @@
       font-family: arial;
     }
   </style>
+{% extends "layout.html" %}
+{% block content %}
 
 
 <body>
@@ -36,6 +38,8 @@
 </form>
 
 </body>
+
+{% endblock %}
 
 
 </html>
