--- a/webserver/templates/user.html
+++ b/webserver/templates/user.html
@@ -25,35 +25,44 @@
 <form method="POST" action="/logout">
 <p><input type="submit" value="Log Out"></p>
 </form>
-<table style="width:20%";display:inline-block>
+<div>
+<table style="float: left; width:20%">
   {% for key, value in stations.iteritems() %}
+    <tr>
     {% for n in value %}
-       <tr><td>{{n}}</td></tr>
+       <td>{{n}}</td>
     {% endfor %}
+    </tr>
   {% endfor %}
 </table>
-<table style="width:20%";display:inline-block>
+<table style="float: left; width:40%">
   {% for key, value in favs.iteritems() %}
+    <tr>
     {% for n in value %}
-      <tr><td>{{n}}</td></tr>
+      <td>{{n}}</td>
     {% endfor %}
+    </tr>
   {% endfor %}
 </table>
-<table style="width:20%";display:inline-block>
+<table style="float: left; width:25%">
   {% for key, value in friends.iteritems() %}
+    <tr>
     {% for n in value %}
-      <tr><td>{{n}}</td></tr>
+      <td>{{n}}</td>
     {% endfor %}
+    </tr>
   {% endfor %}
 </table>
-<table style="width:20%";display:inline-block>
+<table style="float: left; width:15%">
   {% for key, value in subs.iteritems() %}
+    <tr>
     {% for n in value %}
-      <tr><td>{{n}}</td></tr>
+      <td>{{n}}</td>
     {% endfor %}
+    </tr>
   {% endfor %}
 </table>
-
+</div>
 <form method="POST" action="/user/{{name}}/music">
 <p><input type="submit" value="Go to Music"></p>
 </form>
