--- a/webserver/templates/login.html
+++ b/webserver/templates/login.html
@@ -7,9 +7,11 @@
   </style>
 
 
+{% extends "layout.html" %}
+{% block content %}
 <body>
-  <h1>Fav Music App</h1>
-<!--  <div>{{data}}</div>
+<!--  <h1>Fav Music App</h1>
+  <div>{{data}}</div>
 
   <div>
     {% for n in data %}
@@ -28,6 +30,7 @@
 </form>
 
 </body>
+{% endblock %}
 
 
 </html>
