--- a/webserver/templates/layout.html
+++ b/webserver/templates/layout.html
@@ -6,7 +6,8 @@
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style type="text/css">
       .container {
-        max-width: 700px;
+        max-width: 1280px;
+        margin: 0 auto;
       }
       h2 {color: red;}
     </style>
@@ -27,10 +28,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             {{ nav_link('home', 'Home') }}
-            {{ nav_link('about', 'About') }}
-            {{ nav_link('contact', 'Contact Us') }}
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            {{ nav_link('signout', 'Sign Out') }}
+            <!--
             <li><a href="#">Link</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -42,6 +43,7 @@
                 <li><a href="#">Separated link</a></li>
               </ul>
             </li>
+            -->
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
