--- a/webserver/templates/user.html
+++ b/webserver/templates/user.html
@@ -1,17 +1,28 @@
 <html>
-  <style>
+<!--<link rel="stylesheet" type="text/css" href="style.css"/>-->
+<style>
     body{ 
       font-size: 15pt;
       font-family: arial;
     }
-  </style>
+    table, th, td{
+      text-align: left;
+      vertical-align: top;
+      border-collapse: collapse;
+      border: 1px solid #dddddd;
+    }
+    th{ 
+      background-color: #dddddd;
+    }
+</style>
 {% extends "layout.html" %}
 {% block content %}
 
 
 <body>
+<!--
   <h1>Fav Music App</h1>
-<!--  <div>{{data}}</div>
+  <div>{{data}}</div>
 
   <div>
     {% for n in data %}
@@ -23,12 +34,24 @@
 
 <!--<form method="POST" action="/add">-->
 <!--<p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>-->
+<!--
 <p>Hi {{name}}!<p>
 <form method="POST" action="/logout">
 <p><input type="submit" value="Log Out"></p>
 </form>
-<div>
-<table style="float: left; width:20%">
+-->
+<p>Hi {{name}}!<p>
+<div style="float: left; width:20%; margin-right:20px">
+<form action="/user/{{name}}/create_station">
+Stations
+<input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
+</form>
+<div class="table">
+<table >
+  <tr>
+    <th>Name</th>
+    <th>Genre</th>
+  </tr>
   {% for key, value in stations.iteritems() %}
     <tr>
     {% for n in value %}
@@ -37,7 +60,21 @@
     </tr>
   {% endfor %}
 </table>
-<table style="float: left; width:40%">
+</div>
+</div>
+<div style="float: left; width:40%; margin-right:20px">
+<form action="/user/{{name}}/create_station">
+Fav Songs
+<input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
+</form>
+<div class="table">
+<table >
+  <tr>
+    <th>Name</th>
+    <th>Genre</th>
+    <th>Album</th>
+    <th>Artist</th>
+  </tr>
   {% for key, value in favs.iteritems() %}
     <tr>
     {% for n in value %}
@@ -46,16 +83,42 @@
     </tr>
   {% endfor %}
 </table>
-<table style="float: left; width:25%">
+</div>
+</div>
+<div style="float: left; width:20%; margin-right:20px">
+<form action="/user/{{name}}/create_station">
+Friends
+<input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
+</form>
+<div class="table">
+<table>
+  <tr>
+    <th>Name</th>
+    <th></th>
+  </tr>
   {% for key, value in friends.iteritems() %}
     <tr>
-    {% for n in value %}
-      <td>{{n}}</td>
-    {% endfor %}
+     <td>{{value[0]}}</td>
+     {% if value[1] == True %}
+       <td><img src="http://www.freeiconspng.com/uploads/heart-icon-14.png" alt="friend" style="width:15px;height:15px;"></td>
+     {% else %}
+       <td><img src="http://www.freeiconspng.com/uploads/heart-outline-19.png" alt="not friend" style="width:15px:height:15px;"></td>
+     {% endif %}
     </tr>
   {% endfor %}
 </table>
-<table style="float: left; width:15%">
+</div>
+</div>
+<div style="float: left; width:10%; margin-right:20px">
+<form action="/user/{{name}}/create_station">
+Subscriptions
+<input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
+</form>
+<div class="table">
+<table>
+  <tr>
+    <th>Name</th>
+  </tr>
   {% for key, value in subs.iteritems() %}
     <tr>
     {% for n in value %}
@@ -65,9 +128,12 @@
   {% endfor %}
 </table>
 </div>
+</div>
+<!--
 <form method="POST" action="/user/{{name}}/music">
 <p><input type="submit" value="Go to Music"></p>
 </form>
+-->
 
 </body>
 
