--- a/webserver/templates/create_station.html
+++ b/webserver/templates/create_station.html
@@ -8,7 +8,8 @@
       text-align: left;
     }
   </style>
-
+{% extends "layout.html" %}
+{% block content %}
 
 <body>
   <h1>Create New Station</h1>
@@ -30,6 +31,6 @@ Theme: <input type="text" name="theme"> <font size=3>(e.g. dance, workout, relax
 </p>
 
 </body>
-
+{% endblock %}
 
 </html>
