--- a/webserver/templates/user.html
+++ b/webserver/templates/user.html
@@ -33,10 +33,10 @@
   {% endfor %}
 </table>
 
-<form method="POST" action="/user/{{name}}/music">
+<!-- <form method="POST" action="/user/{{name}}/music">
 <p><input type="submit" value="Go to Music"></p>
 </form>
-
+ -->
 </body>
 
 {% endblock %}
