--- a/webserver/templates/layout.html
+++ b/webserver/templates/layout.html
@@ -6,7 +6,8 @@
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style type="text/css">
       .container {
-        max-width: 700px;
+        max-width: 1280px;
+        margin: 0 auto;
       }
       h2 {color: red;}
     </style>
@@ -26,9 +27,10 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            {{ nav_link('home', 'Home') }}
-            {{ nav_link('about', 'About') }}
-            {{ nav_link('contact', 'Contact Us') }}
+            {{ nav_link('profile', 'Home', request.path) }}
+            {{ nav_link('music', 'Music', request.path) }}
+            {{ nav_link('favorites', 'My Favorites', request.path) }}
+            {{ nav_link('friends', 'My Friends', request.path) }}
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Link</a></li>
