--- a/webserver/templates/user.html
+++ b/webserver/templates/user.html
@@ -40,7 +40,6 @@
 <p><input type="submit" value="Log Out"></p>
 </form>
 -->
-<p>Hi {{name}}!<p>
 <div style="float: left; width:20%; margin-right:20px">
 <form action="/user/{{name}}/create_station">
 Stations
@@ -60,17 +59,10 @@ Stations
     </tr>
   {% endfor %}
 </table>
-<<<<<<< HEAD
-
-<!-- <form method="POST" action="/user/{{name}}/music">
-<p><input type="submit" value="Go to Music"></p>
-</form>
- -->
-=======
 </div>
 </div>
 <div style="float: left; width:40%; margin-right:20px">
-<form action="/user/{{name}}/create_station">
+<form action="/user/{{name}}/favorites">
 Fav Songs
 <input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
 </form>
@@ -93,7 +85,7 @@ Fav Songs
 </div>
 </div>
 <div style="float: left; width:20%; margin-right:20px">
-<form action="/user/{{name}}/create_station">
+<form action="/user/{{name}}/friends">
 Friends
 <input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
 </form>
@@ -117,7 +109,7 @@ Friends
 </div>
 </div>
 <div style="float: left; width:10%; margin-right:20px">
-<form action="/user/{{name}}/create_station">
+<form action="/user/{{name}}/favorites">
 Subscriptions
 <input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
 </form>
@@ -142,7 +134,6 @@ Subscriptions
 </form>
 -->
 
->>>>>>> 3690c1a78c631de7f9364869d3e64b9266e6a867
 </body>
 
 {% endblock %}
