--- a/webserver/templates/layout.html
+++ b/webserver/templates/layout.html
@@ -27,17 +27,13 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-<<<<<<< HEAD
             {{ nav_link('profile', 'Home', request.path) }}
             {{ nav_link('music', 'Music', request.path) }}
             {{ nav_link('favorites', 'My Favorites', request.path) }}
             {{ nav_link('friends', 'My Friends', request.path) }}
-=======
-            {{ nav_link('home', 'Home') }}
->>>>>>> 3690c1a78c631de7f9364869d3e64b9266e6a867
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            {{ nav_link('signout', 'Sign Out') }}
+            {{ nav_link('signout', 'Sign Out', request.path) }}
             <!--
             <li><a href="#">Link</a></li>
             <li class="dropdown">
