--- a/webserver/templates/login.html
+++ b/webserver/templates/login.html
@@ -6,9 +6,9 @@
     }
   </style>
 
-<!-- 
+
 {% extends "layout.html" %}
-{% block content %} -->
+{% block content %} 
 <body>
 <!--  <h1>Fav Music App</h1>
   <div>{{data}}</div>
@@ -32,7 +32,6 @@
 -->
 
 </body>
-<!-- {% endblock %}
- -->
+{% endblock %}
 
 </html>
