--- a/webserver/templates/macros.html
+++ b/webserver/templates/macros.html
@@ -3,15 +3,15 @@
 {% set username = splitpath[2] %}
 {% if request.endpoint.endswith(endpoint) %}
   {% if name!='Artist' %}
-    <li class="active"><a href="{{ url_for(endpoint, username=username) }}">{{name}}</a></li>
+    <li class="active"><a href="{{ url_for(endpoint, username=username, albumname='') }}">{{name}}</a></li>
   {% else %}
-    <li class="active"><a href="{{ url_for(endpoint, username=username, albumid=0) }}">{{name}}</a></li>
+    <li class="active"><a href="{{ url_for(endpoint, username=username, albumname='') }}">{{name}}</a></li>
   {% endif %}
 {% else %}
   {% if name!='Artist' %}
-    <li><a href="{{ url_for(endpoint, username=username) }}">{{name}}</a></li>
+    <li><a href="{{ url_for(endpoint, username=username, albumname='') }}">{{name}}</a></li>
   {% else %}
-    <li><a href="{{ url_for(endpoint, username=username, albumid=0) }}">{{name}}</a></li>
+    <li><a href="{{ url_for(endpoint, username=username, albumname='') }}">{{name}}</a></li>
   {% endif %}
 {% endif %}
 {% endmacro %}
