--- a/webserver/templates/layout.html
+++ b/webserver/templates/layout.html
@@ -34,7 +34,7 @@
               {{ nav_link('profile', 'Home', request.path) }}
               {{ nav_link('music', 'Music', request.path) }}
               {{ nav_link('favorites', 'My Favorites', request.path) }}
-              {{ nav_link('friends', 'My Friends', request.path) }}
+              {{ nav_link('my_friends', 'My Friends', request.path) }}
               {{ nav_link('artist', 'Artist', request.path) }}
             {% endif %}
           </ul>
