--- a/webserver/templates/user.html
+++ b/webserver/templates/user.html
@@ -110,7 +110,7 @@ Friends
      {% if value[1] == True %}
        <td><img src="http://www.freeiconspng.com/uploads/heart-icon-14.png" alt="friend" style="width:15px;height:15px;"></td>
      {% else %}
-       <td><img src="http://www.freeiconspng.com/uploads/heart-outline-19.png" alt="not friend" style="width:15px:height:15px;"></td>
+       <td><img src="http://www.freeiconspng.com/uploads/heart-outline-19.png" alt="not friend" style="width:15px;height:15px;"></td>
      {% endif %}
     </tr>
   {% endfor %}
