--- a/webserver/templates/artist_search.html
+++ b/webserver/templates/artist_search.html
@@ -18,39 +18,29 @@
 {% block content %}
 
 <body>
-  <h1>Search results matching '{{query}}'</h1>
 
+<p><font size=3>Search results for '{{query}}':</font></p>
 <div style="float: left; width:50%; margin-right:20px">
 <div class="table">
 <table >
   <tr>
-    <th></th>
-    <th></th>
     <th>Name</th>
-    <th>Genre</th>
-    <th>Album</th>
-    <th>Artist</th>
   </tr>
-  {% for key, value in songs.iteritems() %}
+  {% for key, value in results.iteritems() %}
     <tr>
+      <td>{{value}}</td>
       <td>
-        <form method="POST" action="/user/{{name}}/add_song_to_favorites/{{key}}">
-        <input type="image" src="http://www.clipartbest.com/cliparts/Rid/Mr7/RidMr74i9.png" alt="Submit" width="15" height="15">
+        <form method="POST" action="/user/{{name}}/subscribe/{{key}}">
+          <input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
         </form>
       </td>
-      <td><a href="{{ url_for('profile', username=username, song=key) }}">&#9658</a></td>
-      {% for n in value %}
-      <td>{{n}}</td>
-      {% endfor %}
     </tr>
   {% endfor %}
 </table>
 </div>
-</div>
 
-<br>
-<br>
-</body>
+
+
 {% endblock %}
 
 
