--- a/webserver/templates/user.html
+++ b/webserver/templates/user.html
@@ -41,7 +41,7 @@
 </form>
 -->
 <div style="float: left; width:20%; margin-right:20px">
-<form action="/user/{{name}}/create_station">
+<form action="/user/{{username}}/create_station">
 Stations
 <input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
 </form>
@@ -57,7 +57,7 @@ Stations
        <td>{{n}}</td>
     {% endfor %} -->
     <td>
-        <form method="POST" action="/user/{{name}}/station/{{value[0]}}">
+        <form method="POST" action="/user/{{username}}/station/{{value[0]}}">
           {{value[0]}}  <input type="image" src="https://image.freepik.com/free-icon/edit-interface-symbol-of-a-pencil-on-a-square-outline-paper_318-61160.jpg" alt="Submit" width="15" height="15">
         </form>
     </td>
@@ -69,7 +69,7 @@ Stations
 </div>
 </div>
 <div style="float: left; width:40%; margin-right:20px">
-<form action="/user/{{name}}/favorites">
+<form action="/user/{{username}}/favorites">
 Fav Songs
 <input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
 </form>
@@ -94,7 +94,7 @@ Fav Songs
 </div>
 </div>
 <div style="float: left; width:20%; margin-right:20px">
-<form action="/user/{{name}}/friends">
+<form action="/user/{{username}}/friends">
 Friends
 <input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
 </form>
@@ -118,7 +118,7 @@ Friends
 </div>
 </div>
 <div style="float: left; width:10%; margin-right:20px">
-<form action="/user/{{name}}/favorites">
+<form action="/user/{{username}}/favorites">
 Subscriptions
 <input type="image" src="http://img.freepik.com/free-icon/add-interface-circular-symbol-with-plus-sign_318-67290.jpg?size=338&ext=jpg" alt="Submit" width="15" height="15">
 </form>
